# python-uv-template

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/alembic/: db_mer.md  env.py  script.py.mako
app/alembic/versions/: 02dea4099caf_init_schema.py  0a69e6852f9f_init_schema.py  37d9114b0b1b_init_schema.py  6846196e46f0_init_schema.py  9cbb89a47aa4_init_schema.py
app/api/: __init__.py
app/api/routes/: hero_association.py
app/api/v1/: __init__.py  schemas.py
app/api/v1/routes/: app.py  heroes.py  missions.py  teams.py
app/api/v1/schemas/: heroes.py  missions.py
app/core/: settings.py
app/domain/models/: __init__.py  example.py  hero.py  hero_association.py  item.py  mission.py  order.py  team.py  user.py
app/domain/repositories/: __init__.py  heroes.py  missions.py  teams.py
app/domain/schemas/: hero_association.py
app/domain/services/: __init__.py  heroes.py  missions.py  teams.py
observability/pgadmin/: pgadmin_servers.json
